[project]
name = "bont"
version = "0.1.0"
description = "Convert TrueType fonts to bitmap font texture atlas"
readme = "README.md"
authors = [
    { name = "akennedy", email = "andrewjacobkennedy@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fonttools>=4.61.1",
    "pillow>=12.1.1",
]

[project.urls]
Homepage = "https://github.com/kennedy0/bont"

[tool.ruff]
line-length = 120

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
